# knowledge_base_tool

./: .gitignore  README.md  pyproject.toml
examples/audits/: 3.json
examples/reports/: 3.md
examples/simple_project/: README.md  audit.md
examples/simple_project/src/: Vault.sol
learn_kg/: __init__.py  c4_loader.py  cli.py  config.py  db.py  debug_store.py  export.py  export_checklist.py  extract.py  link.py  llm_client.py  merge.py  models.py  normalize.py  pipeline.py  project_loader.py  prompts.py  schema.py  semantic_mapper.py  taxonomy.py  token_utils.py
outputs/: checklist-c4-3.md
scripts/: crawl_c4.py
tests/: test_c4_loader.py  test_cli_smoke.py  test_db_write.py  test_export_checklist.py  test_finding_agent.py  test_llm_output_normalization.py  test_llm_retry.py  test_pipeline.py  test_project_loader.py  test_semantic_agent.py  test_taxonomy_token.py
tests/fixtures/c4/contracts/1/src/: Vault.sol
tests/fixtures/c4/contracts/2/src/: Pool.sol
tests/fixtures/c4/reports/: 1.md  2.md
tests/fixtures/simple_project/: audit.md
tests/fixtures/simple_project/src/: Vault.sol
