[project]
name = "learn-kg"
version = "0.1.0"
description = "Local smart-contract audit knowledge graph builder"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "sqlalchemy>=2",
  "openai>=1",
  "httpx>=0.27",
  "tiktoken>=0.7",
  "rich>=13",
  "python-dotenv>=1",
  "networkx>=3",
  "jinja2>=3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
learnkg = "learn_kg.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["learn_kg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
